# MuffinClient

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  MainApp.cpp  PotatoEngine.hpp  README.md  conanfile.txt
Layers/: GraphicsBaseLayer.cpp  GraphicsBaseLayer.hpp
Muffin/: MainApp.cpp
Muffin/Core/: MuffinClient.cpp  MuffinClient.hpp
Muffin/Graphics/Skybox/: Skybox.cpp  Skybox.hpp
Muffin/World/: World.cpp  World.hpp
Potato/: Application.cpp  Application.hpp  Core.hpp  EntryPoint.hpp  GraphicsInclude.hpp  Layer.cpp  Layer.hpp  LayerStack.cpp  LayerStack.hpp  Log.cpp  Log.hpp  TimeStep.hpp  Window.hpp
Potato/Camera/: Camera.hpp  OrthographicCamera.cpp  OrthographicCamera.hpp  OrthographicCameraController.cpp  OrthographicCameraController.hpp  PerspectiveCamera.cpp  PerspectiveCamera.hpp  PerspectiveCameraController.cpp  PerspectiveCameraController.hpp
Potato/Core/: Input.cpp  Input.hpp  KeyCodes.hpp  MouseCodes.hpp
Potato/Events/: ApplicationEvent.hpp  Event.hpp  KeyEvent.hpp  MouseEvent.hpp
Potato/PipelineStates/: DefaultRenderTargetObject.cpp  DefaultRenderTargetObject.hpp
Potato/Renderer/: BasicRenderer.cpp  BasicRenderer.hpp  BlockRenderer.cpp  BlockRenderer.hpp  Buffer.cpp  Buffer.hpp  GraphicsContext.cpp  GraphicsContext.hpp  PipelineState.cpp  PipelineState.hpp  QuadRenderer.cpp  QuadRenderer.hpp  RenderCommand.cpp  RenderCommand.hpp  RenderTarget.cpp  RenderTarget.hpp  Renderer.cpp  Renderer.hpp  RendererAPI.cpp  RendererAPI.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp
Potato/Vulkan/: VulkanContext.cpp  VulkanContext.hpp
Potato/Window/: GlfwWindow.cpp  GlfwWindow.hpp
